--- a/styles/style.css
+++ b/styles/style.css
@@ -81,7 +81,12 @@ button {
   border-radius: 0.5em;
   border-style: none;
   padding: 0.4em 1.2em;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);
 
+
+}
+button:hover {
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.6);
 }
 
 
