--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,10 @@ body {
   height: 100%;
 }
 
+body {
+  text-align: center;
+}
+
 .wrapper {
   margin: 0 auto;
   width: 80%;
@@ -20,7 +24,27 @@ body {
   background-position: center;
   background-size: cover;
   background-position: fixed;
+  position: relative;
 }
+
+#main h1 {
+  margin-top: 0;
+  text-align: left;
+}
+
+span {
+  margin-top: 3em;
+  padding: 0.2em 0.6em;
+}
+
+#button-holder {
+  position: absolute;
+  bottom: 10px;
+}
+
+/********************************************************
+ Media Queries
+********************************************************/
 
 @media screen and (min-width: 600px) {
   #main {
@@ -34,11 +58,6 @@ body {
   }
 }
 
-span {
-  margin-top: 3em;
-  padding: 0.2em 0.6em;
-}
-
 /********************************************************
  Navigation
 ********************************************************/
@@ -46,10 +65,6 @@ span {
 #logo {
   max-width: 200px;
   display: inline;
-}
-
-header {
-  background: #0C0C0C;
 }
 
 ul {
@@ -63,19 +78,10 @@ ul {
  Typography
 ********************************************************/
 
-body {
-  text-align: center;
-}
-
 h1,
 h2,
 h3 {
   font-family: 'Montserrat', sans-serif;
-}
-
-#main h1 {
-  margin-top: 0;
-  text-align: left;
 }
 
 .cta {
@@ -92,6 +98,10 @@ p {
  Color Palette
 ********************************************************/
 
+header {
+  background: #0C0C0C;
+}
+
 span {
   background-color: #FFF;
 }
@@ -105,15 +115,18 @@ span {
   color: #FFF;
 }
 
+.social:hover {
+  color: #F21B3F;
+}
+
 /********************************************************
  Buttons
 ********************************************************/
 
 .cta {
   border-style: none;
-  border-radius: 1em;
-  padding: 0.6em 3em;
-
+  border-radius: 0.3em;
+  padding: 0.6em 2em;
 }
 
 .cta:focus {
@@ -124,6 +137,11 @@ span {
  Icons
 ********************************************************/
 
-.fa {
+button .fa {
   margin: 0 0.5em;
+}
+
+.social {
+  font-size: 2em;
+  margin: 0.5em;
 }
