Reinsert button with center style

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,34 +13,20 @@ body {
 
 .wrapper {
   margin: 0 auto;
-  width: 80%;
+  width: 90%;
   max-width: 650px;
 }
 
 #main {
   height: 75%;
   background-image: url("../images/wildertv.jpg");
+  position: relative;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-position: fixed;
-  position: relative;
+  background-attachment: fixed;
 }
 
-#main h1 {
-  margin-top: 0;
-  text-align: left;
-}
-
-span {
-  margin-top: 3em;
-  padding: 0.2em 0.6em;
-}
-
-#button-holder {
-  position: absolute;
-  bottom: 10px;
-}
 
 /********************************************************
  Media Queries
@@ -64,7 +50,6 @@ span {
 
 #logo {
   max-width: 200px;
-  display: inline;
 }
 
 ul {
@@ -98,18 +83,6 @@ p {
  Color Palette
 ********************************************************/
 
-header {
-  background: #0C0C0C;
-}
-
-span {
-  background-color: #FFF;
-}
-
-#main h1 {
-  color: #F21B3F;
-}
-
 .cta {
   background-color: #F21B3F;
   color: #FFF;
@@ -120,22 +93,23 @@ span {
 }
 
 /********************************************************
- Buttons
+ Buttons & Icons
 ********************************************************/
 
 .cta {
   border-style: none;
   border-radius: 0.3em;
   padding: 0.6em 2em;
+  position: absolute;
+  width: 250px;
+  margin-left: -125px;
+  left: 50%;
+  bottom: 20px;
 }
 
 .cta:focus {
   outline: none;
 }
-
-/********************************************************
- Icons
-********************************************************/
 
 button .fa {
   margin: 0 0.5em;
@@ -144,4 +118,11 @@ button .fa {
 .social {
   font-size: 2em;
   margin: 0.5em;
+}
+
+button,
+.social {
+  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+  -moz-transition-duration: 0.3s;
 }
