--- a/styles/style.css
+++ b/styles/style.css
@@ -11,11 +11,6 @@ body {
   text-align: center;
 }
 
-nav {
-  position: fixed;
-  z-index: 1;
-}
-
 .wrapper {
   margin: 0 auto;
   width: 90%;
@@ -52,9 +47,21 @@ nav {
 /********************************************************
  Navigation
 ********************************************************/
+header {
+  position: fixed;
+  width: 100%;
+  float: left;
+  z-index: 1;
+  background-color: #222;
+}
+
+nav {
+
+}
 
 #logo {
-  max-width: 200px;
+  padding: 0.5em;
+  max-width: 250px;
 }
 
 ul {
